# kleio

./: .gitignore  Cargo.toml
.github/workflows/: macos-latest.yml  ubuntu-latest.yml  windows-latest.yml
diagram/: kleio.drawio
script/: constant.rs  event.rs  extract_xh.sh  rustify_x11_constants.sh  rustify_x11_event.sh
src/: lib.rs
src/asset/: broker.rs  mod.rs  source.rs  source_folder.rs
src/event/: event.rs  mod.rs  register.rs  window.rs
src/journal/: entry.rs  journal.rs  listener.rs  listener_print.rs  mod.rs  severity.rs
src/window/: manager.rs  mod.rs  property.rs  receiver.rs
src/window/event/: controller.rs  dispatcher.rs  keyboard.rs  mod.rs  mouse.rs  queue.rs  window.rs
src/window/linux/: mod.rs
src/window/linux/wayland/: mod.rs
src/window/linux/x11/: mod.rs
src/window/wayland/: mod.rs
src/window/x11/: bind.rs  constant.rs  event.rs  mod.rs
tests/: integration_test.rs
tests/kleio/: mod.rs
tests/kleio/asset/: broker.rs  source_folder.rs
tests/kleio/event/: mod.rs
tests/kleio/journal/: buffer.rs  entry.rs  journal.rs  listener.rs  mod.rs
tests/kleio/window/: mod.rs  window.rs
tests/kleio/window/event/: mod.rs
tests/kleio/window/manager/: x11.rs
